--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>西北食谱网</title>
-		<link rel="stylesheet" type="text/css" href="https://github.com/MaxxHarano/NWrecipe/blob/main/formatHomepage.css">
+		<link rel="stylesheet" type="text/css" href="formatHomepage.css">
 		<style>
 			div{
 				display: inline-block;
