--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 		 <p>三为香味突出：除多用香菜作配料外，还常选干辣椒、陈醋和花椒等。干辣椒经油烹后拣出，是一种香辣，辣而不烈。醋经油烹，酸味减弱，香味增加。
 		 花椒经油烹，麻味减少，椒香味增加，选用这些调料的目的，并非单纯为了辣、酸、麻，主要是取其香。</p>
 		 </div>
+		 
+		 <div>
+			 <image src="images/src=http___ci.xiaohongshu.com_a94ff888-b806-ef4a-04cd-488bc6b4b017_imageView2_2_w_1080_format_jpg&refer=http___ci.xiaohongshu.png" width="200px" height="400px">
+		 </div>
 		 </div>
 		 
 		 <h3 class="inset">主食类</h3>
