--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				   <a href="#">回族清真食物</a>
 				</div>
 		   </li>
-	       <li><a href="#news">新增食谱</a></li>
+	       <li><a href="submit_recipe.html">新增食谱</a></li>
 	       <li><a href="#contact">简单易做</a></li>
 	       <li><a href="#about">关于</a></li>
 	     </ul>
@@ -39,7 +39,7 @@
 		 </div>
 		 
 		 <div>
-			 <image src="images/src=http___ci.xiaohongshu.com_a94ff888-b806-ef4a-04cd-488bc6b4b017_imageView2_2_w_1080_format_jpg&refer=http___ci.xiaohongshu.png" width="200px" height="400px">
+			 <image src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fci.xiaohongshu.com%2Fa94ff888-b806-ef4a-04cd-488bc6b4b017%3FimageView2%2F2%2Fw%2F1080%2Fformat%2Fjpg&refer=http%3A%2F%2Fci.xiaohongshu.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto?sec=1668511543&t=673f7b269550911c7a916c0dc5b81a24" align="right" width="300px" height="400px">
 		 </div>
 		 </div>
 		 
