--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		 花椒经油烹，麻味减少，椒香味增加，选用这些调料的目的，并非单纯为了辣、酸、麻，主要是取其香。</p>
 		 </div>
 		 
-		 <div>
+		 <div class="sideimage">
 			 <image src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fci.xiaohongshu.com%2Fa94ff888-b806-ef4a-04cd-488bc6b4b017%3FimageView2%2F2%2Fw%2F1080%2Fformat%2Fjpg&refer=http%3A%2F%2Fci.xiaohongshu.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto?sec=1668511543&t=673f7b269550911c7a916c0dc5b81a24" align="right" width="300px" height="400px">
 		 </div>
 		 </div>
