--- a/index.html
+++ b/index.html
@@ -30,12 +30,19 @@
 	       <li><a href="#about">关于</a></li>
 	     </ul>
 		 <div class="background">
+		         <div class="sidenav">
+ 		           <a href="#">新增内容</a>
+ 		           <a href="#">爆炒菜</a>
+		           <a href="#">煎炸食物</a>
+		           <a href="#">清汤菜</a>
+		         </div>
+			 
 		 <div class="transbox">
 			 <h4 <font size="30px" color="#707070"></font>西北菜总的特色</h4>
-		 <p>一为主料突出：以牛羊肉为主，以山珍野味为辅；</p>
-		 <p>二为主味突出：一个菜肴所用的调味品虽多，但每个菜肴的主味却只有一个，酸辣苦甜咸只有一味出头（包括复合味），其它味居从属地位；</p>
-		 <p>三为香味突出：除多用香菜作配料外，还常选干辣椒、陈醋和花椒等。干辣椒经油烹后拣出，是一种香辣，辣而不烈。醋经油烹，酸味减弱，香味增加。
-		 花椒经油烹，麻味减少，椒香味增加，选用这些调料的目的，并非单纯为了辣、酸、麻，主要是取其香。</p>
+		 	 <p>一为主料突出：以牛羊肉为主，以山珍野味为辅；</p>
+		 	 <p>二为主味突出：一个菜肴所用的调味品虽多，但每个菜肴的主味却只有一个，酸辣苦甜咸只有一味出头（包括复合味），其它味居从属地位；</p>
+		 	 <p>三为香味突出：除多用香菜作配料外，还常选干辣椒、陈醋和花椒等。干辣椒经油烹后拣出，是一种香辣，辣而不烈。醋经油烹，酸味减弱，香味增加。
+		 	 花椒经油烹，麻味减少，椒香味增加，选用这些调料的目的，并非单纯为了辣、酸、麻，主要是取其香。</p>
 		 </div>
 		 
 		 <div class="sideimage">
