--- a/index.html
+++ b/index.html
@@ -151,5 +151,9 @@
 		     <div class="desc">土豆丝</div>
 		   </div>
 		 </div>
+
+		 <footer>
+  		 <p>西北食谱网，站主还在学习中</p>
+ 		 </footer>
 	</body>
 </html>
