--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		  
 		 <div class="responsive">
 		   <div class="img">
-		     <a target="_blank" href="https://img0.baidu.com/it/u=517987973,2338972405&fm=253&fmt=auto&app=138&f=JPEG?w=667&h=500">
+		     <a target="_blank" href="detail01.html">
 		       <img src="https://img0.baidu.com/it/u=517987973,2338972405&fm=253&fmt=auto&app=138&f=JPEG?w=667&h=500" alt="兰州牛肉面" width="400" height="300">
 		     </a>
 		     <div class="desc">兰州牛肉拉面</div>
