--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		   </li>
 	       <li><a href="submit_recipe.html">新增食谱</a></li>
 	       <li><a href="#contact">简单易做</a></li>
-	       <li><a href="#about">关于</a></li>
+	       <li><a href="about.html">关于</a></li>
 	     </ul>
 		 <div class="background">
 		         <div class="sidenav">
@@ -219,6 +219,7 @@ function nextPage() {
 		     <div class="desc">土豆丝</div>
 		   </div>
 		 </div>
+<h2>白框可以添加评论</h2>
 
     <script type="text/javascript">
         onload = function () {
