--- a/about.html
+++ b/about.html
@@ -31,16 +31,12 @@
          </ul>
         <h2 font size="20px" color="#808090"> 关于</h2>
         <ul>
-            <li>主页第一张大图下面有一个翻书效果但是没有成功展示出来</li>
-            <li>表单页是借鉴的</li>
-            <li>不过主页确实算是自己做的，不是直接复制粘贴现成的</li>
+            <li>主页第一张大图下面有一个翻书效果但是没有成功展示出来</li><br/>
+            <li>表单页是借鉴的</li><br/>
+            <li>不过主页确实算是自己做的，不是直接复制粘贴现成的</li><br/>
             <li>最下面footer上面那个白框是用来添加评论的</li>
         </ul>
     </body>
-
-
-
-
 
 
 </html>
